# f1tenth_tada

./: .gitignore  README.md
labs/lab1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
labs/lab1_ws/install/lab1_pkg/lib/lab1_pkg/: relay.py  talker
labs/lab1_ws/install/lab1_pkg/share/ament_index/resource_index/package_run_dependencies/: lab1_pkg
labs/lab1_ws/install/lab1_pkg/share/ament_index/resource_index/parent_prefix_path/: lab1_pkg
labs/lab1_ws/install/lab1_pkg/share/lab1_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
labs/lab1_ws/install/lab1_pkg/share/lab1_pkg/cmake/: lab1_pkgConfig-version.cmake  lab1_pkgConfig.cmake
labs/lab1_ws/install/lab1_pkg/share/lab1_pkg/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
labs/lab1_ws/log/: latest_build
labs/lab1_ws/scripts/: talker.py
labs/lab1_ws/src/install/: local_setup.sh  setup.sh
labs/lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml  setup.py
labs/lab1_ws/src/lab1_pkg/lab1_pkg/: relay.py  talker.py
labs/lab1_ws/src/lab1_pkg/launch/: lab1_launch.py  talker_launch.py
labs/lab1_ws/src/lab1_pkg/scripts/: relay.py
labs/lab1_ws/src/lab1_pkg/src/: relay.cpp  talker.cpp
labs/lab1_ws/src/log/: latest_build
labs/lab2_ws/src/safety_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
labs/lab2_ws/src/safety_node/launch/: safety_node_launch.py
labs/lab2_ws/src/safety_node/scripts/: safety_node.py
labs/lab2_ws/src/safety_node/src/: safety_node.cpp
labs/lab3_ws/src/wall_follow/: CMakeLists.txt  package.xml  setup.cfg  setup.py
labs/lab3_ws/src/wall_follow/launch/: wall_follow_launch.py
labs/lab3_ws/src/wall_follow/scripts/: wall_follow_node.py
labs/lab3_ws/src/wall_follow/src/: wall_follow_node.cpp
